// tbclient.FrsPage.FrsPageResIdl
syntax = "proto3";
option go_package = ".;protobuf";

import "Error.proto";
import "Page.proto";
import "ThreadInfo.proto";
import "User.proto";
import "FrsTabInfo.proto";

message FrsPageResIdl {
    Error error = 1;
    message DataRes {
        message ForumInfo {
            int64 id = 1;
            string name = 2;
            string first_class = 3;
            string second_class = 4;
            int32 member_num = 9;
            int32 thread_num = 10;
            int32 post_num = 11;
            message Manager {}
            repeated Manager managers = 17;
        }
        ForumInfo forum = 2;
        Page page = 4;
        repeated ThreadInfo thread_list = 7;
        repeated User user_list = 17;
        message NavTabInfo {
            repeated FrsTabInfo tab = 1;
        }
        NavTabInfo nav_tab_info = 37;
        message ForumRuleStatus {
            int32 has_forum_rule = 4;
        }
        ForumRuleStatus forum_rule = 105;
    }
    DataRes data = 2;
}